--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.479.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
