--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "rsuite": "^5.78.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
