--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
@@ -28,7 +29,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "rsuite": "^5.78.0",
-    "tailwindcss": "^4.0.8"
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^7.0.39",
+    "tailwindcss": "^4.0.13",
     "vite": "^6.1.0"
   }
 }
