--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
-    "primeflex": "^4.0.0",
     "lucide-react": "^0.479.0",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.2",
     "react": "^19.0.0",
@@ -29,6 +29,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-transition-group": "^4.4.5",
     "rsuite": "^5.78.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
