--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.6",
     "@mui/x-date-pickers": "^7.27.1",
+    "@tailwindcss/oxide": "^4.0.14",
     "@tailwindcss/vite": "^4.0.8",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
